fix emoji rendering (#25)

--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "@teuteuf/react-emoji-render": "^1.2.6",
     "canvas-confetti": "^1.5.1",
     "dayjs": "^1.11.10",
     "geojson": "^0.5.0",
@@ -28,6 +27,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-device-detect": "^2.2.3",
     "react-dom": "^17.0.2",
+    "react-emoji-render": "^2.0.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
