--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.3",
     "@pla324/teuteuf-image-quiz": "^2.0.0",
+    "@pla324/teuteuf-multiple-choice-quiz": "^1.0.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
